new proj/src/objects/GE_ES_Request_Type__c.object
<CustomObject>
    <fields>
        <fullName>GE_ES_RSM__c</fullName>
        <label>RSM</label>
        <picklist>
            <picklistValues>
                <fullName>South - John Pantalone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South - Alex Villegas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South - Rick Smith</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South - David Ottenbreit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South - David A. Roberts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South - Ken Opiela</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South - Troy Bohnert</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AIM - John W Carter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AIM - Dave Talmage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia - YC Lee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia - Tomohiro Fuji</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Europe - Tibor Agoston</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Europe - Dominic Goodwin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Europe - Angel Contreras</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LAPS - Tomas Forti</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North - Roy Reinertsen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North - Dennis Madison</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North - Ken Lutz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North - Brian Ogilvie</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West - Roger Kossoff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BB - Rajni Singh</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Reason_s_for_Missed_Rk_if_applicab__c</fullName>
        <label>Reason(s) for Missed Rk (if applicable)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_ES_Replacement_Motor_Type__c</fullName>
        <label>Replacement Motor Type:</label>
        <picklist>
            <picklistValues>
                <fullName>Up-to-Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Obsolete Duplicate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Requested_Delivery_Date_Prod_Unit__c</fullName>
        <label>Requested Delivery Date Prod. Unit</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_ES_SSO__c</fullName>
        <label>SSO</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Sales_Potential_Year_1__c</fullName>
        <label>Sales Potential Year 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_ES_Sample_Type__c</fullName>
        <label>Sample Type</label>
        <picklist>
            <picklistValues>
                <fullName>B: Physical; non-operational</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C: Operational; unspec-d</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D: Operational; fully spec-d</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B:Physical; non operational</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Samples_Required__c</fullName>
        <label>Samples Required*</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Ship_date__c</fullName>
        <label>Ship by Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_ES_Ship_to_Pole__c</fullName>
        <label>Ship to Pole/Region</label>
        <picklist>
            <picklistValues>
                <fullName>GE Sensing - Asia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GE Sensing - Americas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GE Sensing - EMEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GE Sensing - EMEA - Non EU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Latin America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Middle East/Africa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Signed_EWA__c</fullName>
        <label>Is work to be started under an EWA?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Slpcebrk1__c</fullName>
        <label>Sales Price, Break 1 ***</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_ES_Slpcebrk2__c</fullName>
        <label>Sales Price, Break 2</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_ES_Slpcebrk3__c</fullName>
        <label>Sales Price, Break 3</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_ES_Source_of_Target_Price__c</fullName>
        <label>Source of Target Price*</label>
        <picklist>
            <picklistValues>
                <fullName>Competitor/ Incumbent price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer given - Engineer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer given - Purchasing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Estimate (Other)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Estimate (Sales)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Special_Requirements__c</fullName>
        <label>Special Requirements</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Specification_Number_if_applicable__c</fullName>
        <label>Specification Number (if applicable):</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_ES_Srvc_Rgn__c</fullName>
        <label>Service Region</label>
        <picklist>
            <picklistValues>
                <fullName>Africa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Middle East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Latin America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Northern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Western</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Southern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eastern Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Western Europe</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Street__c</fullName>
        <label>Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_ES_Target_Price_for_Year_1__c</fullName>
        <label>Target Price for Year 1*</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_ES_Target_Price_for_Year_2__c</fullName>
        <label>Target Price for Year 2</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_ES_Target_Price_for_Year_3__c</fullName>
        <label>Target Price for Year 3</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_ES_Target_Quantity_for_Year_1__c</fullName>
        <label>Target Quantity for Year 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_ES_Target_Quantity_for_Year_2__c</fullName>
        <label>Target Quantity for Year 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_ES_Target_Quantity_for_Year_3__c</fullName>
        <label>Target Quantity for Year 3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_ES_Technology__c</fullName>
        <label>Technology</label>
        <picklist>
            <picklistValues>
                <fullName>Gas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Steam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Generator</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Title_Transfer_Terms__c</fullName>
        <inlineHelpText>if not ES-104, please enter Title Transfer Term</inlineHelpText>
        <label>Title Transfer Terms</label>
        <picklist>
            <picklistValues>
                <fullName>Ex Works (EXW)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Free Carrier (FCA)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Free Alongside Ship (FAS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Free on Board (FOB)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cost and Freight (CFR)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cost, Insurance and Freight (CIF)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carriage Paid To (CPT)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carriage and Insurance Paid to (CIP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delivered at Frontier (DAF)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delivered Ex Ship (DES)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delivered Ex Quay (DEQ)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delivered Duty Unpaid (DDU)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delivered Duty Paid (DDP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shipping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OnSite Work</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_TlChrg_cust__c</fullName>
        <label>Tooling Charge to customer ***</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_ES_Tl_Ldtm_wek__c</fullName>
        <label>Tooling Lead time in weeks **</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_ES_Tol_Cst_Est__c</fullName>
        <formula>GE_ES_Mat_c_Yield__c   +   GE_ES_Labcst_Yield__c   +     GE_ES_Var_cstYeld__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Cost Estimate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_ES_ToltmEstaro__c</fullName>
        <label>Total Lead Time Estimate ARO</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Toolng_Cost__c</fullName>
        <label>Tooling Cost</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_ES_TotNRE_Cust__c</fullName>
        <label>Total NRE Charge to Customer ***</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_ES_Total_Order_Value__c</fullName>
        <label>Total Order Value</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Total_PO_Value__c</fullName>
        <label>Total PO Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GE_ES_Total_Quote_Cycle_Time__c</fullName>
        <formula>GE_ES_Actual_Quote_Answer_Provided_to__c  -  GE_ES_Quote_Receipt_Date_Time__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Quote Cycle Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_ES_Transportation_and_Eqpmnt_Dtls__c</fullName>
        <label>Transportation and Equipment Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_ES_Urgent_Instructions__c</fullName>
        <label>Urgent Instructions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_ES_Var_cstYeld__c</fullName>
        <label>Variable overhead cost (Yielded) **</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_ES_Was_JCE_developed_for_this_quote__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Was JCE developed for this quote?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_ES_Who_Will_create_Quote__c</fullName>
        <label>Who Will create Quote?</label>
        <picklist>
            <picklistValues>
                <fullName>Asia AE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boston CC Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Germany CC team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Goleta CC Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India CC Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Italy, Sensing CC Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japan Insidesales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Korea Customer Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Netherlands CC Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEA/ANZ Insidesales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shannon Sensing CC Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UK, Groby - Sensing CC Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IE Ireland, Indust</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MEA Customer Care</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Win_Strategy__c</fullName>
        <label>Win Strategy*</label>
        <picklist>
            <picklistValues>
                <fullName>Price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Problem Solve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spec Position</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Work_Phone_from_Primary_Contact__c</fullName>
        <label>Work Phone # from Primary Contact</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_ES_Zip_Postal_Code__c</fullName>
        <label>Zip/Postal Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_ES_adv_pmt__c</fullName>
        <label>Adv Payment</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_billing_typ__c</fullName>
        <label>Billing Type</label>
        <picklist>
            <picklistValues>
                <fullName>O&amp;M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T&amp;M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Firm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MarginShare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BillingAdjustmentwithCredit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BillingAdjustmentwithCredit/Rebill</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_crit_lt_dt__c</fullName>
        <label>Critically Late Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_ES_erp_qt_nbr__c</fullName>
        <label>Quote No</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_jb_strt_dte__c</fullName>
        <label>Job Start Date</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_jbno__c</fullName>
        <label>Job #</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_jce_attment__c</fullName>
        <label>JCE Attachment</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>GE_ES_loc__c</fullName>
        <label>LoC Flag</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_loc_attment__c</fullName>
        <label>LoC Attachment</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>GE_ES_loc_dtls__c</fullName>
        <label>LoC Details</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_net_id__c</fullName>
        <label>Network Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_oth_attment__c</fullName>
        <label>Other Attachment</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>GE_ES_po_attment__c</fullName>
        <inlineHelpText>In Content Delivery, upload PO or zip file with related documents. Copy the URL link and paste it on this field.</inlineHelpText>
        <label>PO/EWA</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>GE_ES_proj_id__c</fullName>
        <label>Project Id</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_qt_attment__c</fullName>
        <label>Quote Attachment</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>GE_ES_qtd_hrs__c</fullName>
        <label>Quoted Hours</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_qtd_rscs__c</fullName>
        <label>Quoted Resources</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_rct_scwfatt__c</fullName>
        <label>Repairs WF Request URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>GE_ES_serv_ctr__c</fullName>
        <label>Service Center</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_shp_nm__c</fullName>
        <label>Shop Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_task_id__c</fullName>
        <label>Task or Request Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_tc_es104__c</fullName>
        <label>Is T&amp;C based on ES 104?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_trans_stat__c</fullName>
        <label>Transaction Status</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_SFDC_LEGACY_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>SFDC Legacy ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GE_MCS_Amb_Cond__c</fullName>
        <label>If Other Ambient conditions - Specify</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_MCS_Ambient__c</fullName>
        <label>Ambient Conditions</label>
        <picklist>
            <picklistValues>
                <fullName>IEC 60 601-1 (Temperature: 10°C - 40°C)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Humidity: 30% to 75%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Air Pressure 700-1060hPa)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_MCS_Amount__c</fullName>
        <formula>Opportunity__r.Amount</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Amount (All Items)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_MCS_CM__c</fullName>
        <label>CM%  after warranty/ dealer commission</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_MCS_Currency__c</fullName>
        <formula>TEXT(Opportunity__r.CurrencyIsoCode)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_MCS_Dealer_Cst__c</fullName>
        <label>Dealer cost (if any)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_MCS_Dealer__c</fullName>
        <inlineHelpText>Please list and state commission to be included (in%)</inlineHelpText>
        <label>Dealer Commission</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_MCS_Detector__c</fullName>
        <label>Preferred Detector System</label>
        <picklist>
            <picklistValues>
                <fullName>Image Intensifier (765x581)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Image Intensifier 1k (1004x1004)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flat Panel Detector</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_MCS_Diameter__c</fullName>
        <inlineHelpText>Outer Diameter (min/max)</inlineHelpText>
        <label>Outer Diameter (min/max)*</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_MCS_End_NDT__c</fullName>
        <label>End user familiar with NDT procedures?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_MCS_Evaluatn__c</fullName>
        <inlineHelpText>Evaluation of Test Results</inlineHelpText>
        <label>Evaluation of Test Results</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_MCS_Financ__c</fullName>
        <inlineHelpText>Is a leasing/loan offer from DISKO/GE Capital Solution of interest?</inlineHelpText>
        <label>Is financing of interest?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_MCS_HL_Tmp_Ap__c</fullName>
        <label>High temp or low temp application</label>
        <picklist>
            <picklistValues>
                <fullName>High Temperature</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low Temperature</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_MCS_Helcal_Saw__c</fullName>
        <inlineHelpText>Helically welded SAW tubes: min/max angle of weld; min/max strip width</inlineHelpText>
        <label>Helically SAW:min/max angle &amp;strip width</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_MCS_In_Flash__c</fullName>
        <inlineHelpText>If ERW Tubes: Inside and Outside Flash Trimmed or Drawn Tubes?</inlineHelpText>
        <label>In/Outside Flash Trimmed or Drawn Tubes?</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_MCS_Inquiry__c</fullName>
        <inlineHelpText>If so, attach</inlineHelpText>
        <label>Inquiry/specs/drawings received?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_MCS_Inspectn__c</fullName>
        <inlineHelpText>Diameter (mm) x Height (mm)</inlineHelpText>
        <label>Inspection Volume</label>
        <picklist>
            <picklistValues>
                <fullName>Max 300x300</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Max 600x900</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Max 800x1500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_MCS_Length__c</fullName>
        <inlineHelpText>OFFLINE: Length (min/max)</inlineHelpText>
        <label>OFFLINE: Length (min/max)*</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_MCS_Load_Spec__c</fullName>
        <label>If Other Loading/Unloading - Specify</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_MCS_Load__c</fullName>
        <label>Type Of Loading/Unloading</label>
        <picklist>
            <picklistValues>
                <fullName>Manually</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conveyor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coveyor with Separating Device</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Robot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_MCS_Location__c</fullName>
        <inlineHelpText>Final location of installation</inlineHelpText>
        <label>Final location of installation</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_MCS_Long_SAW__c</fullName>
        <inlineHelpText>Longitudinal Welded SAW Tubes: Testing before or after expansion</inlineHelpText>
        <label>Long. SAW Tubes: before/after expansion</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_MCS_Mat_Online__c</fullName>
        <inlineHelpText>BASIC MATERIAL ONLINE: Strip Width (min/max)</inlineHelpText>
        <label>BASIC MAT. ONLINE: Strip Width (min/max)</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_MCS_Mat_Test__c</fullName>
        <inlineHelpText>BASIC MATERIAL ONLINE: Test Speed?</inlineHelpText>
        <label>BASIC MATERIAL ONLINE: Test Speed?*</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_MCS_Material__c</fullName>
        <inlineHelpText>Material to be tested, i.e. steel, aluminium, titanium etc</inlineHelpText>
        <label>Material:steel, aluminium, titanium etc</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_MCS_Mats_Test__c</fullName>
        <label>Material to be tested</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_MCS_NDT__c</fullName>
        <label>Replacement of old NDT tester?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_MCS_NPI__c</fullName>
        <label>NPI  in EUR to be spent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>